fix overflow recommand anime

--- a/src/components/AnimeCard/AnimeCard.css
+++ b/src/components/AnimeCard/AnimeCard.css
@@ -124,11 +124,11 @@
     border-right: 10px solid #fff;
 }
 
-.anime-recommand-container .container .row .col-4:last-child .anime-extra-detail {
+.anime-recommand-container .container .row .col-6:last-child .anime-extra-detail {
     left: -110%;
 }
 
-.anime-recommand-container .container .row .col-4:last-child .anime-extra-detail::before {
+.anime-recommand-container .container .row .col-6:last-child .anime-extra-detail::before {
     left: 100%;
     border-right: 10px solid transparent;
     border-left: 10px solid #fff;
